k8s-rabbitmq/rabbitmq-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: kube-system
spec:
  type: ExternalName
  externalName: rabbitmq.rabbit.svc.cluster.local
