k8s-rabbitmq/rabbitmq-loadbalancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-load-svc
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      name: discovery
    - port: 5672
      targetPort: 5672
      name: amqp
  type: LoadBalancer
