k8s-rabbitmq/rabbitmq-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport
spec:
  type: NodePort
  ports:
  - port: 5672
    targetPort: 5672
    name: amqp
  selector:
    app: rabbitmq
