k8s-rabbitmq/rabbitmq-service-management.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management-svc
spec:
  ports:
  - port: 15672
    targetPort: 15672
    name: discovery
  selector:
    app: rabbitmq
