k8s-rabbitmq/rabbitmq-service-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-queue-svc
spec:
  ports:
  - port: 5672
    targetPort: 5672
    name: amqp
    protocol: TCP
  selector:
    app: rabbitmq
